# My-Agent

./: .env  .gitignore  Dockerfile.api  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  load-simulation.yml
app/core/: boardroom.py  config.py  connector_accounts.py  handlers_registry.py  influencer_templates.py  influencers.py  prospects.py  queue.py  runner.py  scheduler.py
docs/: BUKU_PANDUAN_SISTEM.md  CHECKLIST_DEPLOYMENT.md  DEPLOYMENT_VPS.md  E2E_TEST_STATUS.md  PLANNER_MODEL_BENCHMARK.md  README_UI.md  README_UI_SIMPLE.md  VPS2_INSTRUCTIONS.md
docs/plans/: 2026-03-10-multi-influencer-ai-framework-design.md  2026-03-10-multi-influencer-ai-framework.md
examples/: test_self_healing.py
ops/no-code/: README_ID.md  activate.sh  control.py  control.sh  deactivate.sh  easy.sh  manifest.json  status.sh  watchdog.py  watchdog.sh
ops/notes/: PROGRESS_CHECKPOINT_2026-03-01.md
runpod_templates/: Dockerfile.image  Dockerfile.video  README_ID.md  deploy_flux_worker.sh  image_handler_template.py  requirements_image.txt  requirements_video.txt  runpod_flux_env.example  test_runpod_image_endpoint.sh  video_handler_template.py
scripts/testing/: benchmark_planner_models.py  planner-execute.ps1  (+7 more)
tests/: fake_async_redis.py  test_agent_workflow.py  test_api_redis_recovery.py  test_armory_integration.py  test_config_defaults.py  test_money_flow.py  test_operator_ui_cleanup.py  test_planner_ai.py  test_queue_fallback_mode.py  test_triggers.py
ui/: .env.local  next.config.js  playwright.config.ts
(+37 files in other folders)
