[tool.poetry]
name = "multi-job-platform"
version = "0.1.1"
description = "Multi-Job Platform with Python and Redis"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
redis = "^4.5.5"
aioredis = "^2.0.1"
aiohttp = "^3.8.5"
pyyaml = "^6.0"
prometheus-client = "^0.17.1"
opentelemetry-api = "^1.39.0"
opentelemetry-sdk = "^1.39.0"
opentelemetry-exporter-prometheus = ">=0.60b0,<0.61"
playwright = "^1.41.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
smolagents = "*"
litellm = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.scripts]
spio-skill = "scripts.spio_skill:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
